Modified code